# web3auth-firebase-integration

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
app/: angular.json  firebase.json  package-lock.json  package.json  tsconfig.json
app/src/: index.html  polyfills.ts  webpack.config.js
app/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  home.component.ts  wallet-adapter.module.ts
app/src/app/internals/: errors.ts  from-adapter-event.ts  index.ts  is-not-null-or-undefined.ts  local-storage.ts  sign.ts
app/src/app/models/: user.ts
app/src/app/operators/: index.ts
app/src/app/services/: auth.service.ts  users.service.ts
app/src/app/store/: connection.store.ts  index.ts  wallet.store.ts  web3Auth.store.ts
app/src/app/utils/: constants.ts
app/src/environments/: environment.prod.ts  environment.ts
programs/web3auth-firebase-integration/: Cargo.toml
programs/web3auth-firebase-integration/src/: errors.rs  lib.rs
tests/: web3auth-firebase-integration.ts
tests/utils/: create-mint.ts  create-nft-with-verified-collection.ts  create-user-and-associated-wallet.ts  index.ts
